<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/questionview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:id="@+id/subtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <LinearLayout
        android:id="@+id/cblayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1o1"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1o2"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1o3"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1o4"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layoutrb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2o1">
        </com.google.android.material.radiobutton.MaterialRadioButton>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2o2"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2o3"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2o4"/>
    </LinearLayout>

    <SeekBar
        android:visibility="gone"
        android:id="@+id/q3"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="2"
        android:progress="1" />

    <LinearLayout
        android:id="@+id/questionBttns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/previousQ"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Previous"
            android:background="@drawable/bttncorners" />
        <Button
            android:id="@+id/nextQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next"
            android:background="@drawable/bttncorners"
            />
    </LinearLayout>

</LinearLayout>